2008-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Add missing import.

2008-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Arek Korbik <arek@flumotion.com>

	* flumotion/common/eventcalendar.py:
	Make the module importable without having icalendar and dateutils
	modules.
	Handle iCalendar files with "floating" date-time values.

	* flumotion/component/bouncers/icalbouncer.py:
	Make the iCal bouncer gracefuly handle the situation of missing
	icalendar and dateutil modules.
	Separate I/O exceptions from parsing exceptions when accessing an
	iCalendar file. Fixes #1171.

	* flumotion/component/consumers/disker/disker.py:
	Make the disker check for icalendar and dateutil support in the
	eventcalendar module after importing it. Fixes #1174.

2008-11-04  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	  Add support to check streams with timed token.

2008-11-03  Julien Le Goff <jlegoff@flumotion.com>

	reviewed by: Arek Korbik <arek@flumotion.com>

	* flumotion/manager/component.py:
	  Added a condition in the clock synchronization code that checks
	  whether components belong to the same flow.
	  Fixes #1160 and #1151

2008-11-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/gst010.py:
	  Fixed an identation error that makes the check to crash.

2008-11-03  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	  options error fixed and code clean up.

2008-10-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  If port can be None, it is a crime to debug it with %d.  Change
	  to %r instead.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  Only import eventcalendar where we need it, so we don't always
	  drag in python-icalendar.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>
